=== 2.5

* Minor enhancement
  * The allowed SSL version may now be set via #ssl_version.
    Issue #16 by astera

* Bug fixes
  * The ruby 1.8 speed monkeypatch now handles EAGAIN for windows users.
    Issue #12 by Alwyn Schoeman
  * Fixed POST example in README.  Submitted by injekt.

=== 2.4.1 / 2012-02-03

* Bug fixes
  * When FakeWeb or WebMock are loaded SSL sessions will not be reused to
    prevent breakage of testing frameworks.  Issue #13 by Matt Brictson, pull
    request #14 by Zachary Scott
  * SSL connections are reset when the SSL parameters change.
    Mechanize issue #194 by dsisnero
  * Last-use times are now cleaned up in #shutdown.

=== 2.4 / 2012-01-31

* Minor enhancement
  * net-http-persistent now complains if OpenSSL::SSL::VERIFY_PEER is equal to
    OpenSSL::SSL::VERIFY_NONE.  If you have a platform that is broken this way
    you must define the constant:

      I_KNOW_THAT_OPENSSL_VERIFY_PEER_EQUALS_VERIFY_NONE_IS_WRONG = nil

    at the top level of your application to disable the warning.

* Bug fix
  * Fix persisting SSL sessions through HTTP proxies.  Mechanize issue #178 by
    Robert Poor, net-http-persistent issues #10, #11.

=== 2.3.2 / 2011-12-21

* Bug fix
  * Finish connections that were closed by Net::HTTP so they can be restarted.

=== 2.3.1 / 2011-10-26

* Bug fix
  * If a request object already contains a Connection header it will no longer
    be overridden.  This allows keep-alive connections to be disabled on a
    per-request basis.

=== 2.3 / 2011-10-25

* Minor Enhancement
  * The time since last use for a connection is now recorded in error
    messages for the connection.

=== 2.2 / 2011-10-24

* Minor Enhancements
  * Added timeouts for idle connections which are set through #idle_timeout.
    The default timeout is 5 seconds.  Reducing the idle timeout is preferred
    over setting #retry_change_requests to true if you wish to avoid the "too
    many connection resets" error when POSTing data.